--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "rocketredoc",
-  "private": true,
-  "version": "0.0.0",
+  "name": "rocket-redoc",
+  "private": false,
+  "version": "v1.0.0",
   "type": "module",
+  "author": "Abhishek Chatterjee",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "eslint:check": "eslint --ext tsx,ts ./src",
+    "eslint:write": "eslint --ext tsx,ts --fix ./src",
+    "prepare": "husky"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -17,13 +21,18 @@
   "devDependencies": {
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
-    "@typescript-eslint/eslint-plugin": "^7.0.2",
-    "@typescript-eslint/parser": "^7.0.2",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
+    "eslint-config-standard-with-typescript": "^43.0.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "typescript": "^5.2.2",
+    "husky": "^9.0.11",
+    "typescript": "^5.3.3",
     "vite": "^5.1.4"
   }
 }
