--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "eslint:check": "eslint --ext tsx,ts ./src",
-    "eslint:write": "eslint --ext tsx,ts --fix ./src",
+    "lint:check": "eslint --ext tsx,ts ./src",
+    "lint:write": "eslint --ext tsx,ts --fix ./src",
     "prepare": "husky"
   },
   "dependencies": {
